--- a/custom/css/custom.css
+++ b/custom/css/custom.css
@@ -1,9 +1,10 @@
 nav.navbar:hover {
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 button.button1:hover {
-	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+    0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
 
 div.card {
@@ -12,33 +13,39 @@ div.card {
   text-align: center;
 }
 
-
 div.cardHeader {
-    background-color: #4CAF50;
-    color: white;
-    padding: 10px;
-    font-size: 40px;
+  background-color: #4caf50;
+  color: white;
+  padding: 10px;
+  font-size: 40px;
 }
 
 div.cardContainer {
-    padding: 10px;
+  padding: 10px;
 }
 
-
 .div-hide {
-	display: none;
+  display: none;
 }
 
 .kv-file-zoom {
-	display: none;
+  display: none;
 }
 
 div.kv-avatar div.file-input div.file-preview {
-	width: 200px;
+  width: 200px;
 }
 
 /*login form*/
 .vertical {
-	padding-top: 150px;
-	padding-bottom: 150px;
+  padding-top: 150px;
+  padding-bottom: 150px;
+}
+
+.copoyrightText {
+  color: #fff;
+  font-size: 12px;
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
